k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: a-game
  labels:
    app.kubernetes.io/part-of: a-game
