k8s/70-brain.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: a-game-brain
  namespace: a-game
  labels:
    app.kubernetes.io/part-of: a-game
    app.kubernetes.io/name: a-game-brain
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: a-game-brain # what the Deployment looks for.
                                           # Must match the pod template's labels (#2)

  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: a-game
        app.kubernetes.io/name: a-game-brain # matching with selector (#1)
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000 # the appuser we created in the Dockerfile
      serviceAccountName: a-game-brain-sa
      containers:
        - name: brain
          image: a-game-brain:0.1.0
          imagePullPolicy: IfNotPresent # use the k3d-imported image; don't hit a registry
          ports:
            - name: http
              containerPort: 8000
          livenessProbe:
            httpGet: { path: /health, port: 8000 }
            initialDelaySeconds: 5
            periodSeconds: 15
          readinessProbe:
            httpGet: { path: /readyz, port: 8000 }
            initialDelaySeconds: 5
            periodSeconds: 15
          resources:
            requests: { cpu: 50m, memory: 64Mi }
            limits: { cpu: 250m, memory: 128Mi }
          securityContext:
            allowPrivilegeEscalation: false # can't become root (allowPrivilegeEscalation: false)
            readOnlyRootFilesystem: true # and can't persist anything to disk anyway
            capabilities:
              drop: ["ALL"] # and even if it somehow were, has no root powers (drop: ALL)
