k8s/92-clickhouse.yaml
apiVersion: v1
kind: Service
metadata:
  name: a-game-lang-clickhouse
  namespace: a-game
  labels:
    app.kubernetes.io/name: a-game-lang-clickhouse
    app.kubernetes.io/part-of: a-game
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: a-game-lang-clickhouse
  ports:
    - name: http
      port: 8123
      targetPort: 8123
    - name: tcp
      port: 9000
      targetPort: 9000
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: a-game-lang-clickhouse
  namespace: a-game
  labels:
    app.kubernetes.io/name: a-game-lang-clickhouse
    app.kubernetes.io/part-of: a-game
spec:
  serviceName: a-game-lang-clickhouse
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: a-game-lang-clickhouse
  template:
    metadata:
      labels:
        app.kubernetes.io/name: a-game-lang-clickhouse
        app.kubernetes.io/part-of: a-game
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 101
        fsGroup: 101
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: lang-clickhouse
          image: docker.io/clickhouse/clickhouse-server:25.12
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          volumeMounts:
            - name: clickhouse-data
              mountPath: /var/lib/clickhouse
            - name: clickhouse-logs
              mountPath: /var/log/clickhouse-server
          ports:
            - name: http
              protocol: TCP     # Http is invalid - should be TCP
              containerPort: 8123
            - name: tcp
              protocol: TCP
              containerPort: 9000
          startupProbe:
            exec:
              command: ["sh", "-c", "wget --no-verbose --tries=1 --spider http://localhost:8123/ping || exit 1"]
            periodSeconds: 5
            failureThreshold: 24
          readinessProbe:
            httpGet:
              path: /ping
              port: 8123
            timeoutSeconds: 10
          livenessProbe:
            httpGet:
              path: /ping
              port: 8123
            timeoutSeconds: 10
          resources:
            requests: { cpu: 200m, memory: 512Mi }
            limits:   { cpu: "1",  memory: 3Gi }
  volumeClaimTemplates:
    - metadata:
        name: clickhouse-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
    - metadata:
        name: clickhouse-logs
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
